updating readme
