# WebhookForCustomConnector/OpenApiDefinition/OpenApiDefinition.json
@@ -12,8 +12,10 @@
   "paths": {
     "/event/neworder": {
       "x-ms-notification-content": {
-        "description": "Création d'une nouvelle commande"
-         
+        "description": "Création d'une nouvelle commande",
+        "schema": {
+          "$ref": "#/definitions/Order"
+        }
       },
       "post": {
         "description": "Lorsqu'une nouvelle commande est créée (version d'évaluation)",
@@ -39,7 +41,10 @@
     },
     "/event/instore": {
       "x-ms-notification-content": {
-        "description": "Arrivée de nouveaux produits"
+        "description": "Arrivée de nouveaux produits",
+        "schema": {
+          "$ref": "#/definitions/InStore"
+        }
       },
       "post": {
         "description": "Lorsque qu'un nouveau produit arrive dans le magasin (version d'évaluation)",
@@ -106,7 +111,7 @@
       }
     }
   },
-  "definitions": {   
+  "definitions": {
     "Webhook": {
       "type": "object",
       "required": [ "callBackUrl" ],
@@ -129,6 +134,21 @@
           "items": {
             "$ref": "#/definitions/Order"
           }
+        }
+      }
+    },
+    "InStore": {
+      "type": "object",
+      "properties": {
+        "storeName": {
+          "type": "string"
+        },
+        "productName": {
+          "type": "string"
+        },
+        "quantity": {
+          "format": "int32",
+          "type": "integer"
         }
       }
     },
